--- a/gb/19/7/16/n11387817.md
+++ b/gb/19/7/16/n11387817.md
@@ -1,59 +1,64 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/ldrwvv219/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ldrwvv219/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/ldrwvv219/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/ldrwvv219/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/ldrwvv219/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ldrwvv219/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/ldrwvv219/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/ldrwvv219/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/ldrwvv219/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/ldrwvv219/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/ldrwvv219/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/ldrwvv219/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/ldrwvv219/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/ldrwvv219/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/ldrwvv219/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/ldrwvv219/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/ldrwvv219/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/ldrwvv219/www/master/t/djy/12.jpg" title="捐款"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/ldrwvv219/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/ldrwvv219/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/ldrwvv219/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/ldrwvv219/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/ldrwvv219/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/ldrwvv219/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/ldrwvv219/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/ldrwvv219/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/ldrwvv219/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/ldrwvv219/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/ldrwvv219/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/ldrwvv219/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/ldrwvv219/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/ldrwvv219/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/ldrwvv219/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/ldrwvv219/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/ldrwvv219/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/ldrwvv219/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/ldrwvv219/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/ldrwvv219/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/ldrwvv219/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/ldrwvv219/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/ldrwvv219/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/ldrwvv219/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/ldrwvv219/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/ldrwvv219/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/ldrwvv219/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/eizauy3553/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>马来西亚环球厨艺挑战赛 元培医科大客家菜夺冠</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2019/07/8c1de6955a9e632f954da7ea465ce301-600x400.jpg" />
 <h6>陈孟远与老师陈麒文合影 （元培医科大提供）
 </h6>
 <hr>
-<p>【大纪元2019年07月16日讯】（大纪元记者林宝云台湾新竹综合报导）元培医事科技大学餐饮管理系学生陈孟远，参加由<ahref="https://github.com/ldrwvv219/djy/blob/master/gb/tag/%E9%A9%AC%E6%9D%A5%E8%A5%BF%E4%BA%9A.md#1">马来西亚</a>森美兰餐饮厨业公会举办环球厨艺挑战赛2019，以新竹客家料理风味做成现在法式料理，客家菜脯鸡肉慕斯、桔酱鲜虾球等菜肴参赛，勇夺菜肴冷展冠军及一面银牌。</p>
+<p>【大纪元2019年07月16日讯】（大纪元记者林宝云台湾新竹综合报导）元培医事科技大学餐饮管理系学生陈孟远，参加由<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E9%A9%AC%E6%9D%A5%E8%A5%BF%E4%BA%9A.md#1">马来西亚</a>森美兰餐饮厨业公会举办环球厨艺挑战赛2019，以新竹客家料理风味做成现在法式料理，客家菜脯鸡肉慕斯、桔酱鲜虾球等菜肴参赛，勇夺菜肴冷展冠军及一面银牌。</p>
 <p>元培餐饮管理系由餐饮管理系学生陈孟远以新竹客家料理风味，主任徐珠玺主任与陈麒文老师共同指导，带领进行为期五个月的练习，参赛的菜肴每道菜都有客家风味，色菜摆盘精致又吸晴，一反传统客家美食的样貌，击败来自各地好手，其中陈孟远同学及开胃菜展示勇夺冠军及现场烹饪银牌的好成绩。</p>
-<figure id="attachment_11387819" style="width: 600px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2019/07/802a32167d656806ae66777ba92c5334.jpg"><img class="wp-image-11387819 size-large" src="https://i.epochtimes.com/assets/uploads/2019/07/802a32167d656806ae66777ba92c5334-600x600.jpg" alt="" width="600" b="600" /></a><figcaption class="wp-caption-text">陈孟远与老师陈麒文合影（元培医科大提供）</figcaption></figure>
+<figure id="attachment_11387819" aria-describedby="caption-attachment-11387819" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2019/07/802a32167d656806ae66777ba92c5334.jpg"><img class="wp-image-11387819 size-large" src="https://i.epochtimes.com/assets/uploads/2019/07/802a32167d656806ae66777ba92c5334-600x600.jpg" alt="" width="600" b="600" /></a><figcaption id="caption-attachment-11387819" class="wp-caption-text">陈孟远与老师陈麒文合影（元培医科大提供）</figcaption></figure>
 <p>这次的国际赛除了经WACS&#8221;世界厨师协会所认同比赛，评审也是来自世界各地的名厨，同时也是世界厨师协会的专业评审，元培医事科技大学餐饮系一连在国际比赛拿下多项金牌，也足以证明学校餐饮管理系在国际舞台上的实力是非常的耀眼的。</p>
-<figure id="attachment_11387821" style="width: 600px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2019/07/eb56a6c601b600769a58cb7849ec3be1.jpg"><img class="wp-image-11387821 size-large" src="https://i.epochtimes.com/assets/uploads/2019/07/eb56a6c601b600769a58cb7849ec3be1-600x450.jpg" alt="" width="600" b="450" /></a><figcaption class="wp-caption-text">陈孟远与老师们合影（元培医科大提供）</figcaption></figure>
-<p><ahref="https://github.com/ldrwvv219/djy/blob/master/gb/tag/%E9%A9%AC%E6%9D%A5%E8%A5%BF%E4%BA%9A.md#1">马来西亚</a>森美兰餐饮厨业公会举办环球厨艺挑战赛2019，在芙蓉市NSK中心，7月9至10日赛事为期二天，由10个国家及二百多位选手参赛，这也是在马来西亚有史以来第1次以中餐为主题并且得到&#8221;WACS&#8221;世界厨师联合会承认的比赛。</p>
+<figure id="attachment_11387821" aria-describedby="caption-attachment-11387821" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2019/07/eb56a6c601b600769a58cb7849ec3be1.jpg"><img class="wp-image-11387821 size-large" src="https://i.epochtimes.com/assets/uploads/2019/07/eb56a6c601b600769a58cb7849ec3be1-600x450.jpg" alt="" width="600" b="450" /></a><figcaption id="caption-attachment-11387821" class="wp-caption-text">陈孟远与老师们合影（元培医科大提供）</figcaption></figure>
+<p><ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E9%A9%AC%E6%9D%A5%E8%A5%BF%E4%BA%9A.md#1">马来西亚</a>森美兰餐饮厨业公会举办环球厨艺挑战赛2019，在芙蓉市NSK中心，7月9至10日赛事为期二天，由10个国家及二百多位选手参赛，这也是在马来西亚有史以来第1次以中餐为主题并且得到&#8221;WACS&#8221;世界厨师联合会承认的比赛。</p>
 <p>?责任编辑：英祯</p>
 
 <hr>
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/ldrwvv219/djy/blob/master/gb/18/6/5/n10456555.md#1">圣地亚哥中华历史博物馆面条赛吸引年轻人</a></li>
-<li><a href="https://github.com/ldrwvv219/djy/blob/master/gb/18/9/3/n10686474.md#1">整个暑假不断练习 中州科大国际厨艺赛抱铜牌</a></li>
-<li><a href="https://github.com/ldrwvv219/djy/blob/master/gb/18/11/9/n10840973.md#1">参加韩国国际餐饮大赛   元培医科大勇夺四金一银</a></li>
-<li><a href="https://github.com/ldrwvv219/djy/blob/master/gb/18/11/26/n10874674.md#1">参加国际烹饪艺术赛 大叶大学勇夺5银2铜</a></li>
-<li><a href="https://github.com/ldrwvv219/djy/blob/master/gb/19/4/17/n11192122.md#1">证交所率队引资 向马来西亚台商招手</a></li>
-<li><a href="https://github.com/ldrwvv219/djy/blob/master/gb/19/4/26/n11214512.md#1">南方庄园内部厨艺赛  创意萝卜糕肴媲美米其林</a></li>
-<li><a href="https://github.com/ldrwvv219/djy/blob/master/gb/20/4/29/n12070148.md#1">表扬模范母亲 新竹县长亲自到府赠送匾额</a></li>
-<li><a href="https://github.com/ldrwvv219/djy/blob/master/gb/20/4/29/n12070249.md#1">疫情肆虐 清华弦歌不辍！2020年的校庆很特别</a></li>
-<li><a href="https://github.com/ldrwvv219/djy/blob/master/gb/20/4/29/n12070158.md#1">五一连假 到竹县两大乐园玩正是时候</a></li>
-<li><a href="https://github.com/ldrwvv219/djy/blob/master/gb/20/4/29/n12070256.md#1">医护辛苦了！竹三校赠餐点防疫品加油打气</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/6/5/n10456555.md#1">圣地亚哥中华历史博物馆面条赛吸引年轻人</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/9/3/n10686474.md#1">整个暑假不断练习 中州科大国际厨艺赛抱铜牌</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/11/9/n10840973.md#1">参加韩国国际餐饮大赛   元培医科大勇夺四金一银</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/11/26/n10874674.md#1">参加国际烹饪艺术赛 大叶大学勇夺5银2铜</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/4/17/n11192122.md#1">证交所率队引资 向马来西亚台商招手</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/4/26/n11214512.md#1">南方庄园内部厨艺赛 创意萝卜糕肴媲美米其林</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/29/n13680722.md#1">工研院携手致茂办量测论文竞赛 培育技术人才</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/29/n13680584.md#1">苗栗春祭暨遥祭黄陵联合祭典</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/29/n13680574.md#1">事迹受肯定 大千三位医事人员获优秀青年表扬</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678598.md#1">力积电董事长黄崇仁获颁阳明交大名誉博士</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/6/26/n10513377.md#1" target="_blank">土改中的按比例杀人与反人类酷刑</a></li><li><a href="https://github.com/ldrwvv219/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank">人心向善 大陆当初盛况</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/6/28/n11352168.md#1" target="_blank">前大陆公安：中共镇压法轮功早有预谋</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank">中共的伪火骗局</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/3/21/n10235717.md#1" target="_blank">袁斌：重温“革命烈士”夏明翰的《就义诗》（上）</a></li><li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/18/10/27/n10812623.md#1" target="_blank">印度媒体：成千上万人炼法轮功 深受裨益</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/ldrwvv219/djy/blob/master/gb/20/4/27/n12065545.md#1">董卿刚刚辟谣 其老公密春雷“暴富史”被扒</a></li>
-<li><a href="https://github.com/ldrwvv219/djy/blob/master/gb/20/4/27/n12065576.md#1">专家：金正恩可能在视察导弹试射时受伤</a></li>
-<li><a href="https://github.com/ldrwvv219/djy/blob/master/gb/20/4/27/n12064980.md#1">【新闻看点】庚子年忧思疯传 北京麻烦有多少？</a></li>
-<li><a href="https://github.com/ldrwvv219/djy/blob/master/gb/20/4/27/n12064628.md#1">台劳工纾困贷款10万元 4月30日首批开放申请</a></li>
-<li><a href="https://github.com/ldrwvv219/djy/blob/master/gb/20/4/28/n12068456.md#1">疫情追查 传五眼联盟在调查石正丽周鹏</a></li>
-<li><a href="https://github.com/ldrwvv219/djy/blob/master/gb/20/4/26/n12062937.md#1">周星驰近况曝光 与林允隔空互动笑翻网络</a></li>
-<li><a href="https://github.com/ldrwvv219/djy/blob/master/gb/20/4/27/n12065497.md#1">罗志祥丑闻引抵制风波 陆综近亿酬金或成泡影</a></li>
-<li><a href="https://github.com/ldrwvv219/djy/blob/master/gb/20/4/27/n12064217.md#1">流浪猫带路人去买食物给它吃 结果被收养</a></li>
-<li><a href="https://github.com/ldrwvv219/djy/blob/master/gb/20/4/28/n12068100.md#1">台湾连续三天零确诊 林志玲用逗趣谐音表心情</a></li>
-<li><a href="https://github.com/ldrwvv219/djy/blob/master/gb/20/4/26/n12062791.md#1">圈内人相继染疫离世 日本名导北野武萌生退意</a></li>
-<li><a href="https://github.com/ldrwvv219/djy/blob/master/gb/20/4/25/n12060433.md#1">为着神意而战 巴顿将军的为将之道</a></li>
-<li><a href="https://github.com/ldrwvv219/djy/blob/master/gb/20/4/24/n12059475.md#1">【历史上的瘟疫】终结王莽新朝的大瘟疫</a></li>
-<li><a href="https://github.com/ldrwvv219/djy/blob/master/gb/20/4/4/n12002808.md#1">仙境一来回九十年 采药人得寿五千年</a></li>
-<li><a href="https://github.com/ldrwvv219/djy/blob/master/gb/20/4/19/n12044233.md#1">【历史上的瘟疫】科技难挡19世纪霍乱</a></li>
-<li><a href="https://github.com/ldrwvv219/djy/blob/master/gb/20/4/3/n11999664.md#1">天地清明引(271) 众生劫－王终见王1</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/12/16/n13442125.md#1">【百年真相】云南省委书记案 138万人受牵连</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/9/n13632196.md#1">【百年真相】三件大坏事 江泽民最想让人遗忘</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/24/n13671140.md#1">【未解之谜】沙中庞贝 楼兰之谜</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/16/n13649079.md#1">【人生之钥】败家子卖田地卖金玉 结局出人意料</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/2/17/n13582749.md#1">【奇术】看风也能预知命运和兴衰成败</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13679009.md#1">【秦鹏直播】为李莹发声险被抓 王圣强：不怕消失</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13679468.md#1">【探索时分】叙利亚雇佣兵能帮上俄罗斯吗？</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13679596.md#1">【远见快评】传普京重大让步 乌克兰中立秘辛</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13675009.md#1">五大战区部署歼-20 中共空军意欲何为</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/24/n13669168.md#1">配F-35C等舰载机 美福特号航母已准备好战斗</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674635.md#1">六四领袖被刺杀 FBI盯上中共间谍</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676833.md#1">47岁林志玲产后首晒照 获赞“最美妈咪”</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678198.md#1">威尔史密斯奥斯卡台上打人 摘影帝后致歉落泪</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678918.md#1">大S具俊晔已在台湾完成登记 结婚纪念日选这天</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676987.md#1">威尔?史密斯上台搧颁奖人 杜汶泽一假设引共鸣</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13675982.md#1">《柏捷顿家族：名门韵事》第二季影评：三角恋难题 仍可圆满解决</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13677065.md#1">新筛查方法可查出95%一期胰腺癌</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/25/n13673047.md#1">搭机4点让旅途更安全 资深空姐：选飞机很重要</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/19/n13657423.md#1">吃对了肌肤就漂亮 10大食材为肌肤打底</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674013.md#1">吃奇异果不用削皮 连皮一起吃营养更加倍</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676145.md#1">为什么新衣服在穿着之前要先洗涤？</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/ldrwvv219/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/ldrwvv219/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/19/7/16/n11387817.htm">马来西亚环球厨艺挑战赛 元培医科大客家菜夺冠</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/19/7/16/n11387817.htm">马来西亚环球厨艺挑战赛 元培医科大客家菜夺冠</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/ldrwvv219/djy/blob/master/gb/19/7/16/n11387817.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/ldrwvv219/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ldrwvv219/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/ldrwvv219/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/ldrwvv219/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/ldrwvv219/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ldrwvv219/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/ldrwvv219/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ldrwvv219/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/ldrwvv219/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ldrwvv219/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/ldrwvv219/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ldrwvv219/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/ldrwvv219/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ldrwvv219/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/ldrwvv219/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ldrwvv219/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/ldrwvv219/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ldrwvv219/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/ldrwvv219/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ldrwvv219/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/ldrwvv219/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ldrwvv219/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/ldrwvv219/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ldrwvv219/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/ldrwvv219/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ldrwvv219/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/ldrwvv219/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ldrwvv219/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/ldrwvv219/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ldrwvv219/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/ldrwvv219/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ldrwvv219/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/ldrwvv219/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ldrwvv219/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/ldrwvv219/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ldrwvv219/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/ldrwvv219/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ldrwvv219/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/ldrwvv219/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ldrwvv219/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/ldrwvv219/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ldrwvv219/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/ldrwvv219/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ldrwvv219/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/ldrwvv219/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ldrwvv219/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/ldrwvv219/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ldrwvv219/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/eizauy3553/djy/blob/master/gb/19/7/16/n11387817.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
